--- a/JAOTT/Views/Staffs/Delete.cshtml
+++ b/JAOTT/Views/Staffs/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model JAOTT.Models.Teacher
+﻿@model JAOTT.Models.Staff
 
 @{
     ViewBag.Title = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Teacher</h4>
+    <h4>Staff</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -25,30 +25,6 @@
 
         <dd>
             @Html.DisplayFor(model => model.LastName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.School)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.School)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.About)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.About)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Approved)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Approved)
         </dd>
 
     </dl>
