--- a/JAOTT/Views/Staffs/Index.cshtml
+++ b/JAOTT/Views/Staffs/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<JAOTT.Models.Teacher>
+﻿@model IEnumerable<JAOTT.Models.Staff>
 
 @{
     ViewBag.Title = "Index";
@@ -17,15 +17,6 @@
         <th>
             @Html.DisplayNameFor(model => model.LastName)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.School)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.About)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Approved)
-        </th>
         <th></th>
     </tr>
 
@@ -36,15 +27,6 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.LastName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.School)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.About)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Approved)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
