--- a/JAOTT/Views/Teachers/Details.cshtml
+++ b/JAOTT/Views/Teachers/Details.cshtml
@@ -3,40 +3,61 @@
 @{
     ViewBag.Title = "Details";
 }
-
-<h2>Details</h2>
-
-<div>
+<div class="container">
+    <h3>
+        @Html.DisplayFor(model => model.FirstName) @Html.DisplayFor(model => model.LastName)
+    </h3>
+    <br />
     <h4>Teacher</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </dt>
+    <div>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.FirstName)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.FirstName)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.FirstName)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.LastName)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.LastName)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.LastName)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.LastName)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Approved)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.School)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Approved)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.School)
+            </dd>
 
-    </dl>
+            <dt>
+                @Html.DisplayNameFor(model => model.About)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.About)
+            </dd>
+
+            @if (User.IsInRole("Admin"))
+            {
+                <dt>
+                    @Html.DisplayNameFor(model => model.Approved)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Approved)
+                </dd>
+            }
+        </dl>
+    </div>
+    <p>
+        @Html.ActionLink("Edit", "Edit", new { id = Model.Id })
+
+    </p>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
