--- a/JAOTT/Views/Missions/Index.cshtml
+++ b/JAOTT/Views/Missions/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Index of Missions</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -20,7 +20,9 @@
         <th>
             @Html.DisplayNameFor(model => model.StartTime)
         </th>
-        <th></th>
+        <th>
+            @Html.DisplayNameFor(model => model.About)
+        </th>
     </tr>
 
 @foreach (var item in Model) {
@@ -33,6 +35,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.StartTime)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.About)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
