--- a/JAOTT/Views/Requests/Create.cshtml
+++ b/JAOTT/Views/Requests/Create.cshtml
@@ -23,12 +23,11 @@
             </div>
         </div>
 
-
         <div class="form-group">
-            @Html.LabelFor(model => model.ProgramId, "ProgramId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Topic, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("ProgramId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.program.Topic, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Topic, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Topic, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -48,6 +47,9 @@
     </div>
 }
 
+<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
